Upgrade to Solr 9.0 dependency